# stack-git-package-subdirs-test

./: git-package-subdirs.cabal  stack.yaml
