cabal-version:       >=1.10
name:                git-package-subdirs
version:             0.1.0.0
author:              Rodney Lorrimar
maintainer:          dev@rodney.id.au
build-type:          Simple

executable git-package-subdirs
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
  default-language:    Haskell2010
